k8s/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: storage-server
  namespace: uhrp-storage
  labels:
    app: storage-server
    app.kubernetes.io/name: storage-server
    app.kubernetes.io/component: api
  annotations:
    service.beta.kubernetes.io/aws-load-balancer-backend-protocol: http
    service.beta.kubernetes.io/aws-load-balancer-ssl-ports: "https"
spec:
  type: ClusterIP
  selector:
    app: storage-server
  ports:
  - name: http
    port: 80
    targetPort: http
    protocol: TCP
  sessionAffinity: None
